# apk-parser

./: README.md  pyproject.toml
apkparser/: __init__.py  __version__.py  main.py  old.py
apkparser/helper/: logging.py
apkparser/permission/: __init__.py
apkparser/permissions/: __init__.py
apkparser/signature/: __init__.py
apkparser/utils/: __init__.py
apkparser/zip/: headers.py  utils.py
tests/: test_apk_original.py
