[project]
name = "apk-parser"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["Android, Androguard, Security"]
description = "APK Parser"
requires-python = ">=3.10"
dynamic = ["version"]
authors = [{ name = "Anthony Desnos", email = "anthony@42.bzh" }]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
    "Topic :: Security",
]
dependencies = []

[project.scripts]
apkparser = "apkparser.main:app"

[build-system]
requires = [
    "setuptools>=68",
    "setuptools_scm>=8.0",
]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
include = ["apkparser", "apkparser.*"]


[tool.setuptools_scm]
version_file = "apkparser/__version__.py"


[tool.black]
line-length = 79
skip-string-normalization = true
